--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
   <title>Otika - Admin Dashboard Template</title>
   <!-- General CSS Files -->
-  <link rel="stylesheet" href="assets/css/app.min.css">
+  <link rel="stylesheet" href="app.min.css">
   <!-- Template CSS -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="components.css">
